@@ -62,8 +62,6 @@
 
       li a,
       li button {
-        forced-color-adjust: none;
-        background-color: $color-black;
         border-color: $color-white;
         color: $color-white;
       }
